--- a/plugin.ini
+++ b/plugin.ini
@@ -3,8 +3,8 @@ name="User Tags"
 author="Roy Rosenzweig Center for History and New Media"
 description="Allows users to add private tags to items."
 license="GPLv3"
-link="http://omeka.org/codex/Plugins/UserTags"
-support_link="http://omeka.org/forums/forum/plugins"
+link="https://omeka.org/codex/Plugins/UserTags"
+support_link="https://omeka.org/forums/forum/plugins"
 omeka_minimum_version="2.0"
 omeka_target_version="2.0"
 version="1.0"
